--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="row">
                   <div style="padding: 40px;" class="col-lg-4">
                     <div id="card" class="card">
-                      <img src="/assets/img/kanabisz.png" class="card-img-top" alt="Kannabisz">
+                      <img src="assets/img/kanabisz.png" class="card-img-top" alt="Kannabisz">
                         <div class="card-body">
                           <h1 class="card-title">Kannabisz</h1>
                         </div>
@@ -26,7 +26,7 @@
                   </div>
                   <div style="padding: 40px;" class="col-lg-4">
                     <div id="card" class="card">
-                      <img src="/assets/img/kanabisz.png" class="card-img-top" alt="Kannabisz">
+                      <img src="assets/img/kanabisz.png" class="card-img-top" alt="Kannabisz">
                         <div class="card-body">
                           <h1 class="card-title">Ecstasy</h1>
                         </div>
@@ -34,7 +34,7 @@
                   </div>
                   <div style="padding: 40px;" class="col-lg-4">
                     <div id="card" class="card">
-                      <img src="/assets/img/kanabisz.png" class="card-img-top" alt="Kannabisz">
+                      <img src="assets/img/kanabisz.png" class="card-img-top" alt="Kannabisz">
                         <div class="card-body">
                           <h1 class="card-title">Kokain</h1>
                         </div>
