--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/assets/index.css">
+    <link rel="stylesheet" href="assets/index.css">
     <title>Kábítószerek | Főoldal</title>
 </head>
 <body>
